kubernetes/netatmo-exporter/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: netatmo-exporter
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netatmo-exporter
      app.kubernetes.io/instance: netatmo-exporter
  template:
    metadata:
      name: netatmo-exporter
      labels:
        app.kubernetes.io/name: netatmo-exporter
        app.kubernetes.io/instance: netatmo-exporter
    spec:
      containers:
      - name: netatmo-exporter
        image: ghcr.io/xperimental/netatmo-exporter:2.1.2@sha256:db0f94e68faa98bde52b597a5085a0ca46ec50615fedd6f187080f18ac43344c
        volumeMounts:
        - name: data-volume
          mountPath: /data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: netatmo-exporter-data
